[package]
name = "basis-universal"
version = "0.3.1"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/basis-universal-rs"
homepage = "https://github.com/aclysma/basis-universal-rs"
description = "Bindings for the basis-universal Supercompressed GPU Texture Codec by Binomial"
keywords = ["game", "basis-universal", "texture", "compression", "gpu"]
categories = ["game-development", "graphics", "api-bindings", "compression", "encoding"]

[features]
default = ["transcoding", "encoding", "ktx2"]
encoding = ["basis-universal-sys/encoding"]
transcoding = ["basis-universal-sys/transcoding"]
ktx2 = ["basis-universal-sys/ktx2"]
zstd = ["basis-universal-sys/zstd"]

[dependencies]
basis-universal-sys = { version = "0.3.1", path = "../basis-universal-sys", default-features = false }
lazy_static = "1.4.0"
bitflags = "1.2.1"

[dev-dependencies]
image = "0.23.13"
lz4 = "1.23"
